componentDidMount now calcs total shares outstanding

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "augur.js": "^5.0.1",
+    "d3-dsv": "^1.0.8",
+    "d3-format": "^1.2.1",
+    "d3-scale": "^1.0.7",
+    "d3-time-format": "^2.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-stockcharts": "^0.7.7",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
