--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "d3-format": "^1.2.1",
     "d3-scale": "^1.0.7",
     "d3-time-format": "^2.1.1",
+    "prop-types": "^15.6.0",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-stockcharts": "^0.7.7",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "shortid": "^2.2.8"
   },
   "scripts": {
